[package]
name = "cytron_maker_pi_rp2040"
version = "0.3.0"
authors = ["9names"]
edition = "2021"
homepage = "https://github.com/9names/makerpi_rp2040"
repository = "https://github.com/9names/makerpi_rp2040"
description = "Board Support Package for the Cytron Maker Pi RP2040"
license = "Apache-2.0 OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.2"
rp2040-boot2 = { version = "0.2.0", optional = true }
rp2040-hal = "0.6.0"
cortex-m-rt = { version = "0.7", optional = true }

[dev-dependencies]
panic-halt= "0.2.0"
embedded-hal ="0.2.5"
smart-leds = "0.3.0"
ws2812-pio = "0.4.0"
nb = "1.0"
fugit = "0.3.6"

[features]
default = ["boot2", "rt"]
boot2 = ["rp2040-boot2"]
rt = ["cortex-m-rt","rp2040-hal/rt"]
