[package]
name = "cytron_maker_pi_rp2040"
version = "0.5.0"
authors = ["9names"]
edition = "2021"
homepage = "https://github.com/9names/makerpi_rp2040"
repository = "https://github.com/9names/makerpi_rp2040"
description = "Board Support Package for the Cytron Maker Pi RP2040"
license = "Apache-2.0 OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.2"
rp2040-boot2 = { version = "0.3", optional = true }
rp2040-hal = "0.9"
cortex-m-rt = { version = "0.7", optional = true }

[dev-dependencies]
panic-halt= "0.2.0"
embedded-hal ="0.2.5"
smart-leds = "0.3.0"
ws2812-pio = "0.7"
nb = "1.0"
fugit = "0.3.6"

[features]
default = ["boot2", "rt", "critical-section-impl", "rom-func-cache"]
# critical section that is safe for multicore use
critical-section-impl = ["rp2040-hal/critical-section-impl"]

# 2nd stage bootloaders for rp2040
boot2 = ["rp2040-boot2"]

# Minimal startup / runtime for Cortex-M microcontrollers
rt = ["cortex-m-rt","rp2040-hal/rt"]

# This enables a fix for USB errata 5: USB device fails to exit RESET state on busy USB bus.
# Only required for RP2040 B0 and RP2040 B1, but it also works for RP2040 B2 and above
rp2040-e5 = ["rp2040-hal/rp2040-e5"]

# Memoize(cache) ROM function pointers on first use to improve performance
rom-func-cache = ["rp2040-hal/rom-func-cache"]